fix nav/searh alignment
put nav and searchbox into its own div so it aligns properly in desktop mode.

--- a/grunt/cssSource/_base.scss
+++ b/grunt/cssSource/_base.scss
@@ -325,6 +325,12 @@ $mobile-retina:
 
 @mixin site-header {
   width:209px;
+  float: left;
+}
+
+@mixin nav-search {
+  float: left;
+  margin-left: 200px;
 }
 
 /*
