--- a/grunt/cssSource/_baseIE8Desktop.scss
+++ b/grunt/cssSource/_baseIE8Desktop.scss
@@ -201,6 +201,10 @@
    */
   
 
+  #nav-search {
+    @include nav-search
+  }
+
   .page-content {
     width: $inner-content-width;
     max-width: $inner-content-width;
